[tool.poetry]
name = "undictify"
version = "0.7.2"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = ["py36", "py37", "py38"]

[testenv]
whitelist_externals = which
                      /bin/bash

commands = which python
           pip list

"""
